fixed css spacing and bugs

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -77,7 +77,7 @@ list-item {
 
 .euLogo img {
   display: inline;
-  height: 20vh;
+  height: 15vh;
 }
 
 .euText {
@@ -87,9 +87,9 @@ list-item {
 }
 
 .logoImage {
-  width: 20vh;
+  width: 15vh;
   max-width: 30vw;
-  height: 20vh;
+  height: 15vh;
   float: right;
 }
 
@@ -102,6 +102,7 @@ list-item {
   background: white;
   display: flex;
   opacity: 0.9;
+  text-align: center;
 }
 
 .heading {
@@ -202,7 +203,7 @@ list-item {
   cursor: pointer;
 }
 
-.animalList hover {
+.animalList:hover {
   color: blue;
 }
 
@@ -214,19 +215,23 @@ form {
   display: flex;
   flex-direction: row;
 }
+
 .simpleField {
   width: 100%;
 }
+
 .titleHerd {
   font-size: 2em;
   border-bottom: 1px solid lightgrey;
   margin: 5px 0 20px 0;
 }
+
 .subheading {
   font-size: 14;
   border-bottom: 1px solid lightgrey;
   margin: 20px 0 5px 0;
 }
+
 .formCard {
   padding: 15px;
   margin: 10px;
@@ -234,29 +239,35 @@ form {
   border: 1px solid grey;
   border-radius: 5px;
 }
+
 .editButton {
   float: right;
   margin: 20px 0 0 0;
 }
+
 .editLink {
   color: blue;
 }
 
-.editLink hover {
+.editLink:hover {
   color: purple;
   cursor: pointer;
 }
+
 .spanTitle {
   font-weight: bold;
   margin-left: 20px;
 }
+
 .contactInfo {
   margin-bottom: 30px;
 }
+
 .permissionGroup {
   display: flex;
   flex-direction: row;
 }
+
 .permissionField {
-  width: "200px";
+  width: 200px;
 }
